# sprita

./: .gitignore  Cargo.toml  README.md
scripts/: optimize.sh
src/: arguments.rs  error.rs  image_ops.rs  logging.rs  main.rs  ops.rs  padding.rs
