[package]
authors = ["tidakjelas92 <hansenan14@gmail.com>"]
description = "sprita is a sprite preparing tool for game development."
edition = "2021"
license-file = "LICENSE.txt"
name = "sprita"
readme = "README.md"
repository = "https://github.com/tidakjelas92/sprita"
version = "0.1.0"
keywords = ["gamedev", "sprite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "derive"] }
image = "0.24.4"
log = "0.4.17"
simplelog = "0.12.0"
